force-app/main/default/objects/Travel_Detail__c/Travel_Detail__c.object-meta.xml
<CustomObject>
    <label>Travel Detail</label>
    <nameField>
        <label>Employee name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>