force-app/main/default/objects/Travel_Detail__c/fields/Accompanying_Person__c.field-meta.xml
<CustomField>
    <fullName>Accompanying_Person__c</fullName>
    <inlineHelpText>Name the person one who Travelling with you</inlineHelpText>
    <label>Accompanying Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>