force-app/main/default/objects/Travel_Detail__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Travel Details</relationshipLabel>
    <relationshipName>Travel_Details</relationshipName>
    <type>Lookup</type>
</CustomField>