force-app/main/default/objects/Travel_Detail__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <inlineHelpText>Position in the company</inlineHelpText>
    <label>Designation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>