force-app/main/default/objects/Travel_Detail__c/fields/Employee_id__c.field-meta.xml
<CustomField>
    <fullName>Employee_id__c</fullName>
    <inlineHelpText>Here your employee Id will be shown / Need to be filled</inlineHelpText>
    <label>Employee id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>