force-app/main/default/objects/Travel_Detail__c/fields/Mode_of_travel__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_travel__c</fullName>
    <inlineHelpText>Select the way of travel to your Destiniy</inlineHelpText>
    <label>Mode of travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental car/bike</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Mini cab/Taxi</fullName>
            </value>
            <value>
                <fullName>Airfare</fullName>
            </value>
            <value>
                <fullName>Fuel charge</fullName>
            </value>
            <value>
                <fullName>Toll fare</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>