force-app/main/default/objects/Travel_Detail__c/fields/Travel_date_from__c.field-meta.xml
<CustomField>
    <fullName>Travel_date_from__c</fullName>
    <label>Travel date from</label>
    <type>DateTime</type>
</CustomField>