force-app/main/default/objects/Travel_Detail__c/fields/Travel_from_address__c.field-meta.xml
<CustomField>
    <fullName>Travel_from_address__c</fullName>
    <label>Travel from address</label>
    <type>TextArea</type>
</CustomField>