force-app/main/default/objects/Travel_Detail__c/fields/Travels_to_address__c.field-meta.xml
<CustomField>
    <fullName>Travels_to_address__c</fullName>
    <label>Travels to address</label>
    <type>TextArea</type>
</CustomField>